...

@Composable
fun AboutScreen(modifier: Modifier = Modifier, updateContent: (@Composable () -> Unit)? = null) {
    val strings = LocalStrings.current

    Surface(
        modifier = modifier.fillMaxSize().testTag("about-screen"),
        color = MaterialTheme.colorScheme.background,
    ) {
        Column(
            modifier = Modifier.fillMaxSize().padding(32.dp).verticalScroll(rememberScrollState()),
            verticalArrangement = Arrangement.spacedBy(16.dp),
        ) {
...
